--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,7 +30,7 @@
 		</nav>
 		<div class="main-img-container">
 			<div class="jumbotron">
-            	<h1 class="display-h1">NewScrape Stand</h1>
+            	<h1 class="display-h1">News Scrape</h1>
             	<div class="jumbo-theme">
                     <hr class="my-4" >
         		</div>
